Commented out letter-spacing property in styles.css to prevent the text from looking funky when truncated. Also, made the single quotes into double quotes.

--- a/frontend/src/modules/game/styles.css
+++ b/frontend/src/modules/game/styles.css
@@ -34,15 +34,11 @@
   text-align: justify;
   font-size: 16px;
   line-height: 1.75rem;
-  letter-spacing: 0.025rem;
+  /*If this is not removed/commented out the text looks funky (i.e. only one word on some lines*/
+  /*letter-spacing: 0.025rem;*/
   text-shadow: 0 0 7px rgba(0, 0, 0, 0.45);
   font-family: Georgia, serif;
 }
-
-/*
-This is to remove <br> tags when game summary is truncated.*/
-br{content:" ";}
-br:after{content:" ";}
 
 .popup,
 .popup::before {
